# tranqu

./: .gitignore  .readthedocs.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  temp_test_file.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/setup-staq/: action.yml
.github/workflows/: ci.yaml  ci.yml  labeler.yaml  mypy.yaml  python-publish.yaml  release.yaml  ruff.yaml  test.yaml
docs/: CONTRIBUTING.md  index.md
docs/developer_guidelines/: development_flow.md  setup.md
docs/usage/: custom.ipynb  getting_started.ipynb  how_it_works.ipynb
src/tranqu/: __init__.py  device_type_manager.py  program_type_manager.py  tranqu.py  transpiler_dispatcher.py
src/tranqu/device_converter/: __init__.py  device_converter_manager.py  qiskit_device.py  qiskit_to_tket_device_converter.py
src/tranqu/program_converter/: __init__.py  openqasm3_to_ouqu_tp_program_converter.py  openqasm3_to_tket_program_converter.py  ouqu_tp_to_openqasm3_program_converter.py  ouqu_tp_to_qiskit_program_converter.py  qiskit_to_ouqu_tp_program_converter.py  qiskit_to_quri_parts_program_converter.py  qiskit_to_tket_program_converter.py  quri_parts_to_qiskit_program_converter.py  tket_to_openqasm3_program_converter.py  tket_to_qiskit_program_converter.py
src/tranqu/transpiler/: __init__.py  base_qiskit_transpiler.py  ouqu_tp_transpiler.py  qiskit_stats_extractor.py  qiskit_transpiler.py  tket_layout_mapper.py  tket_stats_extractor.py  tket_transpiler.py  transpiler.py  transpiler_manager.py
tests/tranqu/: test_device_type_manager.py  test_program_type_manager.py  test_tranqu.py  test_transpile_result.py  test_yaml_config.py
tests/tranqu/device_converter/: test_qiskit_to_tket_device_converter.py
tests/tranqu/program_converter/: test_openqasm3_to_tket_program_converter.py  test_qiskit_to_ouqu_tp_program_converter.py  test_qiskit_to_quri_parts_program_converter.py  test_qiskit_to_tket_program_converter.py  test_quri_parts_to_qiskit_program_converter.py  test_tket_to_openqasm3_program_converter.py  test_tket_to_qiskit_program_converter.py
tests/tranqu/transpiler/: Krasnovia.ipynb  test_ouqu_tp_transpiler.py  test_qiskit_stats_extractor.py  test_qiskit_transpiler.py  test_tket_transpiler.py  test_transpiler_manager.py
