[project]
name = "tranqu"
version = "1.0.1"
description = "Tranqu: A one-stop framework for transpilers across multiple quantum programming libraries and formats for quantum circuits"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" }]
keywords = []
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.10"
dependencies = [
  "qiskit>=2.0.0",
  "qiskit_qasm3_import>=0.5.0",
  "pytket>=2.0.0",
  "pytket-qiskit>=0.67.0",
  "ouqu-tp>=1.0.3",
  "qiskit-ibm-runtime==0.24.1",
  "quri-parts-qiskit<0.21.0"
]

[project.urls]
documentation = "https://tranqu.readthedocs.io/"
repository = "https://github.com/oqtopus-team/tranqu"

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "ruff>=0.15.11",
  "vulture>=2.16",
]
test = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
]
docs = [
  "ipykernel>=6.29.5",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-macros-plugin>=1.3.7",
  "mkdocs-material>=9.5.44",
  "mkdocstrings[python]<0.26.0",
  "mkdocs-autorefs<1.3.0",
  "pymarkdownlnt>=0.9.36",
  "pymdown-extensions>=10.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tranqu"]

[tool.ruff]
preview = true
include = [
  "src/**/*.py",
  "tests/**/*.py"
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN201",
  "ANN205",
  "ANN401",
  "CPY001",
  "D",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S101",
]

[tool.mypy]
files = ["src", "tests"]
mypy_path = ["src"]
ignore_missing_imports = true

[mypy.quri_parts]
ignore_missing_imports = true


[tool.vulture]
paths = ["src", "tests"]
ignore_names = ["_default_options", "process_circuit"]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pymarkdown]
plugins.line-length.enabled = false            # MD013: Disable line length limit
plugins.first-line-heading.enabled = false     # MD041: Allow files to start without a top-level heading
plugins.code-block-style.enabled = false       # MD046: Disable code block style consistency
plugins.reference-links-images.enabled = false # MD060: Allow inconsistent reference link styles
